# cookie

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  docs.yaml  feature_request.yaml
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml  label-commenter.yml  labels.yml  misspell.yml  preview-docs.yml
docs/: CONTRIBUTING.md
latest/: 404.html  index.html  sitemap.xml
latest/CHANGELOG/: index.html
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/LICENSE/: index.html
latest/search/: search_index.json
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: cd.yml  ci.yml  codecov.yml  codeql-analysis.yml  label-commenter.yml  labels.yml  misspell.yml  preview-docs.yml
{{cookiecutter.project_name}}/docs/src/: {{cookiecutter.package_name}}.md
