[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "cookie"
version = "1.0.2"
description = "🐍🍪 A Python Cookiecutter tailored towards Group4Life projects"
readme = "README.md"
authors = ["billsioros <billsioros97@gmail.com>"]
license = "MIT"
homepage = "https://Group4Life.github.io/cookie"
repository = "https://github.com/Group4Life/cookie"
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Group4Life/cookie/issues"
"Changelog" = "https://github.com/Group4Life/cookie/releases"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "*"
isort = "*"
pre-commit = "*"
poethepoet = "*"
pytest = "*"
pytest-sugar = "*"
pytest-clarity = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-minify-plugin = "*"
mkdocs-redirects = "*"
mdx-truly-sane-lists = "*"
mike = "*"
pytest-cookies = "*"
black = "*"

[tool.black]
line-length = 99
target-version = ["py37", "py38"]
skip-string-normalization = true
exclude = "{{cookiecutter.project_name}}"

[tool.isort]
profile = "black"
src_paths = ["cookie", "hooks", "tests"]
line_length = 99

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = false
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "tests"

[tool.semantic_release]
upload_to_pypi = false
version_toml = "pyproject.toml:tool.poetry.version"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"
build_command = false

[tool.poe.tasks]

  [tool.poe.tasks.clean]
    cmd = "rm -rf ./**/__pycache__ dist site .pytest_cache"
    help = "Clean up any auxiliary files"

  [tool.poe.tasks.format]
    shell = "poetry run isort .; poetry run black ."
    help = "Format your codebase"

  [tool.poe.tasks.hooks]
    cmd = "poetry run pre-commit run --all-files"
    help = "Run all pre-commit hooks"

  [tool.poe.tasks.test]
    cmd = "poetry run pytest --cov=cookie"
    help = "Run the test suite"

  [tool.poe.tasks.lint]
    cmd = "poetry run ruff check src"
    help = "Lint your code for errors"

  [tool.poe.tasks.docs]
    shell = "python -c 'import webbrowser; webbrowser.open(\"http://127.0.0.1:8000\")'; poetry run mkdocs serve"
    help = "Build and serve the documentation"

  [tool.poe.tasks.export]
    cmd = "poetry export --without-hashes --dev -o requirements.txt"

[tool.docformatter]
black = true
non-strict = true
non-cap = [
  "cookie",
]
recursive = true
in-place = true

[tool.bandit]
recursive = true
exclude_dirs = ["tests"]
